--- a/AEA.html
+++ b/AEA.html
@@ -28,9 +28,10 @@
             <div id="menu">
                 <ul style="margin-top: 14%;">
                     <li><a href="AEA.html">AEA Academy</a></li>
-                    <li><a href="PAR.html">PAR</a></li>
                     <li><a href="scheduler.html">Job Scheduler</a></li>
+                    <li><a href="PAR.html">Pistol Attendance Record</a></li>
                     <li><a href="DesertSoftware.html">Desert Software</a></li>
+                    <li><a href="MoreWork.html">More Work</a></li>
                     <li><a href="About.html">Profile</a></li>
                 </ul>
             </div>
@@ -55,7 +56,7 @@
                     <div class="col-md-6">
                         <h5 class="text-light" style="font-weight: 600">SUMMARY</h5>
                         <p class="lead text-left text-light" style="font-size: 25px !important">
-                            I lead design on the fully customized Educational App with a purpose to achieve paperless teaching environment
+                            I lead design on the fully customized educational App with a purpose to assist paperless teaching method
                         </p>
                     </div>
                 </div>
@@ -95,7 +96,7 @@
                         <div class="col-md-6 mb-5">
                             <img src="images/Icon-1-1.svg" class="mb-4" style="max-width:100%; height: auto">
                             <p class="lead text-left">
-                                Achieve paperless education environment through App
+                                Assist in paperless education environment through App
                             </p>
                         </div>
                         <div class="col-md-6 mb-5">
@@ -353,14 +354,14 @@
             </div>
         </div>
 
-        <div class="py-3 mt-5 fade" style="background: #BCC7CE">
+        <div class="py-3 mt-5 fade" style="background: #83b3d4">
             <div class="container">
                 <h5 class="text-light mb-3 text-center">NEXT PROJECT</h5>
                 <div class="row text-center ">
                     <div class="col-md-12 mt-3">
-                        <h3 class="text-light" style="font-weight: 600">Pistol Attendance Record</h3>
+                        <h3 class="text-light" style="font-weight: 600">Job Scheduler</h3>
                     </div>
-                    <a href="PAR.html" role="button" class="btn btn-light mx-auto badge-pill bg-transparent my-3" style="width: 44px; height: 44px"><i class="fas fa-long-arrow-alt-right text-light" style="margin-top:6px"></i></a>
+                    <a href="scheduler.html" role="button" class="btn btn-light mx-auto badge-pill bg-transparent my-3" style="width: 44px; height: 44px"><i class="fas fa-long-arrow-alt-right text-light" style="margin-top:6px"></i></a>
                 </div>
             </div>
         </div>
