--- a/About.html
+++ b/About.html
@@ -28,14 +28,15 @@
             <div id="menu">
                 <ul style="margin-top: 14%;">
                     <li><a href="AEA.html">AEA Academy</a></li>
-                    <li><a href="PAR.html">PAR</a></li>
                     <li><a href="scheduler.html">Job Scheduler</a></li>
+                    <li><a href="PAR.html">Pistol Attendance Record</a></li>
                     <li><a href="DesertSoftware.html">Desert Software</a></li>
+                    <li><a href="MoreWork.html">More Work</a></li>
                     <li><a href="About.html">Profile</a></li>
                 </ul>
             </div>
         </div>
-        <div style="background-image: url('images/Profile-White-@2x.jpg'); height: 72%; background-position: center; background-repeat: no-repeat; background-size: cover;">
+        <div style="background-image: url('images/profile.jpg'); height: 72%; background-position: center; background-repeat: no-repeat; background-size: cover;">
             <div class="row mx-auto" style="padding-top: 10rem; max-width: 1250px">
                 <div class="col-md-6">
                     <h3 class="text-left text-light" style="font-size: 32px">
@@ -63,9 +64,6 @@
                         <p class="lead text-left pr-5">
                             I love structure and order and I also stand for quality. I love spending time on fixing little details and optimizing web/mobile applications. Also I like working in a team, you'll learn faster and much more. As the saying goes: "Two heads are better than one".
                         </p>
-                        <p class="lead text-left pr-5">
-                            Effectively develop, and collaborate with others to develop, database-centric solutions within a distributed team of SQL, .NET and PHP developers. Successfully develop solutions associated with data migration of all the branch servers in a Microsoft SQL Server environment. Developed and maintained ASP.NET applications and databases by evaluating client needs.
-                        </p>
                     </div>
                 </div>
             </div>
@@ -80,39 +78,33 @@
                 </div>
                 <div class="col-md-6" style="max-width: 40% !important">
                     <div class="row px-3 mb-5">
-                        <h5 class="text-secondary" style="font-weight: 600">UI/UX/DIGITAL DESIGNER & WEB DEVELOPER — DESERT SOFTWARE<br />NOV 2017 — PRESENT</h5>
+                        <h5 class="text-secondary" style="font-weight: 600">UI/UX/DIGITAL DESIGNER & FRONT END DEVELOPER — DESERT SOFTWARE<br />NOV 2017 — PRESENT</h5>
                         <p class="lead text-left pr-5">
                             In this startup software and web service company, I work as a designer & developer for web applications including CMS, integrated dashboard systems, WordPress/Bootstrap websites and App UI design such as prototype design, wireframe work and UI visual design. The web applications are PHP based using HTML, CSS and Javascript, the UI design utilizes Adobe Creative Suite
                         </p>
                         <p class="lead text-left pr-5">
-                            Worked as the lead designer on projects collaborating closely with developers, PO's and clients within weekly sprint cycles.
+                            Worked as the lead designer on projects collaborating closely with other developers and clients within weekly sprint cycles.
                         </p>
                         <p class="lead text-left pr-5">
                             Designed promotional campaign content for emails, social media posts, landing pages and animated banner ads.
                         </p>
                         <p class="lead text-left pr-5">
-                            Drove a human-centered approach within our agile workflow by successfully introducing research initiatives that would help build better products and trust with our clients.
+                            Ran user interview and testing sessions.
                         </p>
                         <p class="lead text-left pr-5">
-                            Ran user interview and testing sessions.
+                            Managed outsourcing development teams.
                         </p>
                     </div>
                     <div class="row px-3 mb-5">
                         <h5 class="text-secondary" style="font-weight: 600">PROTOTYPE DESIGNER & FRONT-END DEVELOPER — UMBRELLA DEMENTIA CAFES<br />MAY 2017 — OCT 2017</h5>
                         <p class="lead text-left pr-5">
-                            Working as a prototype designer & junior front-end developer on a Melbourne based startup cafes website for people living with dementia. The website is built in MVC framework with multiple functions including online shopping, online group chat and social media integrated.
+                            Worked as a prototype designer & junior front-end developer on a Melbourne based startup cafes website for people living with dementia. The website is built in MVC framework with multiple functions including online shopping, online group chat and social media integrated.
                         </p>
                     </div>
                     <div class="row px-3 mb-5">
                         <h5 class="text-secondary" style="font-weight: 600">UI/UX DESIGNER & FRONT-END DEVELOPER — SHENGXIAO MACHINERY<br />SEP 2016 — MAR 2017</h5>
                         <p class="lead text-left pr-5">
-                            At Shengxiao I learned to apply my knowledge of HTML & CSS with a development team to design, build and maintain the website. I was responsible for UI/UX design and part of the front-end development. It also involved a lot of image editing work using Adobe Creative Suite.
-                        </p>
-                    </div>
-                    <div class="row px-3">
-                        <h5 class="text-secondary" style="font-weight: 600">ASSOCIATE SOFTWARE DEVELOPER — DAMI TECHNOLOGY<br />SEP 2013 — JAN 2015</h5>
-                        <p class="lead text-left pr-5">
-                            At Shengxiao I learned to apply my knowledge of HTML & CSS with a development team to design, build and maintain the website. I was responsible for UI/UX design and part of the front-end development. It also involved a lot of image editing work using Adobe Creative Suite.
+                            At Shengxiao I learned how to apply HTML & CSS knowledge from textbooks in real development by working with other developers. I was a part of the the dev team to design, build and maintain the website. I was responsible for UI/UX design and part of the front-end development. It also involved a lot of image editing work using Adobe Creative Suite.
                         </p>
                     </div>
                 </div>
@@ -145,7 +137,7 @@
                     <div class="row px-3">
                         <h5 class="text-secondary" style="font-weight: 600">QINGDAO TECHNOLOGICAL UNIVERSITY - NETWORK ENGINEERING BA<br />2007–2011</h5>
                         <p class="lead text-left pr-5">
-                            Networking is the application of designing, building, and maintaining computer networks for the world. This course opened the door to the computer world for me. It thought me about the mechanisms of computer and its network, why it has such tremendous potential, and how to utilize it effectively.
+                            Networking is the application of designing, building, and maintaining computer networks for the world. Courses like those led me to a new world of computing. They taught me about the mechanisms of computer and its network, why it has such tremendous potential, and how to utilize it effectively.
                         </p>
                         <span class="experience-details">
                             <span class="location">
@@ -308,7 +300,7 @@
                                         </span>
                                     </li>
                                     <li>
-                                        <span class="ability-title">MVC Pattern</span>
+                                        <span class="ability-title">Javascript</span>
                                         <span class="ability-score">
                                             <i class="fas fa-star filled"></i>
                                             <i class="fas fa-star filled"></i>
@@ -348,7 +340,7 @@
                                         </span>
                                     </li>
                                     <li>
-                                        <span class="ability-title">Javascript</span>
+                                        <span class="ability-title">MVC Pattern</span>
                                         <span class="ability-score">
                                             <i class="fas fa-star filled"></i>
                                             <i class="fas fa-star filled"></i>
