--- a/PAR.html
+++ b/PAR.html
@@ -28,17 +28,18 @@
             <div id="menu">
                 <ul style="margin-top: 14%;">
                     <li><a href="AEA.html">AEA Academy</a></li>
-                    <li><a href="PAR.html">PAR</a></li>
                     <li><a href="scheduler.html">Job Scheduler</a></li>
+                    <li><a href="PAR.html">Pistol Attendance Record</a></li>
                     <li><a href="DesertSoftware.html">Desert Software</a></li>
+                    <li><a href="MoreWork.html">More Work</a></li>
                     <li><a href="About.html">Profile</a></li>
                 </ul>
             </div>
         </div>
         
-        <div style="background-image: url('images/RTO_header_img6.jpg'); height: 65%; background-position: center; background-repeat: no-repeat; background-size: cover;" >
+        <div style="background-image: url('images/Par-header.jpg'); height: 65%; background-position: center; background-repeat: no-repeat; background-size: cover;" >
         </div>
-        <div class="pt-5" style="background-color: #858992; height: 360px">
+        <div class="pt-5" style="background-color: #628198; height: 360px">
             <div class="container pt-4">
                 <div class="row">
                     <div class="col-md-6">
@@ -75,7 +76,7 @@
                         PAR (Pistol Attendance Record) is a paperless dashboard system which is integrated with the PAR mobile app. The combination of those is designed for pistol shooters to eliminate the hassle of filling out forms when participating shooting events at pistol clubs within states.
                     </p>
                     <p class="lead text-left">
-                         The goal is to make it easier for users to keep and manage shooting records. Our customers already has a very basic version of the dashboard and app, so we need to re-beautify and include more functionality to the system.
+                         The goal is to make it easier for users to keep and manage shooting records. Our customers already has a very basic version of the dashboard and app, so we need to re-beautify and build more functionality into the system.
                     </p>
                 </div>
             </div>
@@ -269,12 +270,12 @@
         <div class="px-5 pt-5 fade">
             <div class="row p-5">
                 <div class="col-md-6 text-center">
-                    <h3>Pixel Consistency</h3>
+                    <h3>Component Consistency</h3>
                 </div>
                 <div class="col-md-6" style="max-width: 40% !important">
                     <div class="row px-3">
                         <p class="lead text-left pr-5">
-                            Alongside the finished interface designs, I produced a guide file documenting all elements to keep the designs as consistent and re-usable as possible. This was an important tool for the development team to use and build an understanding for.
+                            It is very important for both dev team and design team to be on the same page when it comes to system design especially when we face regular change in personnel. It's always necessay to produce a guide file documenting all elements to keep the designs as consistent and re-usable as possible.
                         </p>
                     </div>
                 </div>
@@ -303,14 +304,14 @@
             </div>
         </div>
 
-        <div class="py-3 mt-5 fade" style="background: #BCC7CE">
+        <div class="py-3 mt-5 fade" style="background: #96bdb4">
             <div class="container">
                 <h5 class="text-light mb-3 text-center">NEXT PROJECT</h5>
                 <div class="row text-center ">
                     <div class="col-md-12 mt-3">
-                        <h3 class="text-light" style="font-weight: 600">Job Scheduler</h3>
+                        <h3 class="text-light" style="font-weight: 600">Desert Software</h3>
                     </div>
-                    <a href="scheduler.html" role="button" class="btn btn-light mx-auto badge-pill bg-transparent my-3" style="width: 44px; height: 44px"><i class="fas fa-long-arrow-alt-right text-light" style="margin-top:6px"></i></a>
+                    <a href="DesertSoftware.html" role="button" class="btn btn-light mx-auto badge-pill bg-transparent my-3" style="width: 44px; height: 44px"><i class="fas fa-long-arrow-alt-right text-light" style="margin-top:6px"></i></a>
                 </div>
             </div>
         </div>
