--- a/scheduler.html
+++ b/scheduler.html
@@ -28,9 +28,10 @@
             <div id="menu">
                 <ul style="margin-top: 14%;">
                     <li><a href="AEA.html">AEA Academy</a></li>
-                    <li><a href="PAR.html">PAR</a></li>
                     <li><a href="scheduler.html">Job Scheduler</a></li>
+                    <li><a href="PAR.html">Pistol Attendance Record</a></li>
                     <li><a href="DesertSoftware.html">Desert Software</a></li>
+                    <li><a href="MoreWork.html">More Work</a></li>
                     <li><a href="About.html">Profile</a></li>
                 </ul>
             </div>
@@ -38,7 +39,7 @@
         
         <div style="background-image: url('images/scheduler_header_img.jpg'); height: 65%; background-position: center; background-repeat: no-repeat; background-size: cover;" >
         </div>
-        <div class="pt-5" style="background-color: #8196c5; height: 360px">
+        <div class="pt-5" style="background-color: #83b3d4; height: 360px">
             <div class="container pt-4">
                 <div class="row">
                     <div class="col-md-6">
@@ -55,7 +56,7 @@
                     <div class="col-md-6">
                         <h5 class="text-light" style="font-weight: 600">SUMMARY</h5>
                         <p class="lead text-left text-light" style="font-size: 25px !important">
-                            I created the web application prototype and lead UI design and a part of the front-end coding
+                            I created the web application prototype and lead UI design and be a part of the front-end coding
                         </p>
                     </div>
                 </div>
@@ -109,13 +110,13 @@
                         <div class="col-md-6 mb-5">
                             <img src="images/Icon-4-1.svg" class="mb-4" style="max-width:100%; height: auto">
                             <p class="lead text-left">
-                                Establish trust and usability through excellent UI
+                                Capacity and flexibility for future functionality expansion
                             </p>
                         </div>
                         <div class="col-md-6 mb-5">
                             <img src="images/Icon-5b-1.svg" class="mb-4" style="max-width:100%; height: auto">
                             <p class="lead text-left">
-                                Capacity and flexibility for future functionality expansion
+                                Differentiate from competitors through innovation
                             </p>
                         </div>
                     </div>
@@ -170,23 +171,7 @@
                                 Information Architecture
                             </p>
                         </div>
-                        <div class="col-md-6 mb-5">
-                            <img src="images/Icon-Manufacturer-visit.svg" class="mb-4" style="max-width:100%; height: auto">
-                            <p class="lead text-left">
-                                Pistol club visits
-                            </p>
-                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="row p-5">
-                <div class="col-md-6">
-                </div>
-                <div class="col-md-6 my-auto" style="max-width: 40% !important">
-                    <h5 style="font-weight: 600;color: #ff7c79">APPROACH</h5>
-                    <p class="lead text-left">
-                        To gather insights on the current Bedbuilder experience from customers, staff and manufacturer’s, with a focus on both long term and short term states.
-                    </p>
                 </div>
             </div>
         </div>
@@ -203,18 +188,18 @@
                 <div class="col-md-6 pt-5" style="max-width: 40% !important">
                     <div class="row">
                         <div class="col-md-6 mb-5">
-                            <h5 class="text-dark" style="font-weight: 600">Pistol shooters</h5>
+                            <h5 class="text-dark" style="font-weight: 600">Job managers</h5>
                             <p class="lead text-left">
-                                Whether a student chooses one course or several courses, displaying the curriculum and materials required for the courses is the key features of the app, which was originally the intention to replace the paper-based information carrier.
+                                Scheduling various roadworks every day is a complex and repetitive task. Each worker needs to be considered and coordinated to ensure that the work is completed on time. So what we need is a simple application that minimizes repetitive inputs.
                             </p>
                             <p class="lead text-left">
-                                Without traditional paper files to browse, it's important that the app can service these core users needs.
+                                Also it's important to have such features as to search and manage documents of all the records that we completed and had issues in.
                             </p>
                         </div>
                         <div class="col-md-6 mb-5">
-                            <h5 class="text-dark" style="font-weight: 600">The police</h5>
+                            <h5 class="text-dark" style="font-weight: 600">Crew members</h5>
                             <p class="lead text-left">
-                                The app should be a great replacement for the paper materials generated during the teaching process including handouts, reading materials, and various application forms used in student services such as course registries and transcript applications. Even classroom tests can be done in this app.
+                                What we need is an easy way to view the daily schedule and receive work assignment information in a very simple way. At the same time, many of us workers don't use smartphones, so don't show off with your high-tech operation, it's important to be able to organize work in the dumbest way possible.
                             </p>
                         </div>
                     </div>
@@ -224,12 +209,12 @@
                 <div class="col-md-6">
                 </div>
                 <div class="col-md-6 my-auto" style="max-width: 45% !important">
-                    <h5 style="font-weight: 600;color: #ff7c79">INTERACTION OPTIMIZATION</h5>
+                    <h5 style="font-weight: 600;color: #ff7c79">INTERACTION</h5>
                     <p class="lead text-left">
-                        We optimized all the modals for job creation and assignment and improved the drag and drop interaction after several attempts to help aid the end-users to get a smooth experience.
+                        We optimized all the modals for job creation and assignment and improved the drag and drop interaction after several attempts to help aid the end users to get a smooth experience.
                     </p>
                     <p class="lead text-left">
-                        Also we try to make the link page as similar as app experience when users click the link in text messages to accept or decline the job that has been assigned to them..
+                        Also we try to make the job info page as simple and clear as possible when users click the link in text messages to accept or decline the job that has been assigned to them.
                     </p>
                 </div>
             </div>
@@ -246,12 +231,12 @@
         <div class="px-5 pt-5">
             <div class="row p-5">
                 <div class="col-md-6 text-center">
-                    <h3>Defining the MVP</h3>
+                    <h3>Optimize Notification</h3>
                 </div>
                 <div class="col-md-6" style="max-width: 40% !important">
                     <div class="row px-3">
                         <p class="lead text-left pr-5">
-                            Through close collaboration with the lead developer, I was able to fine tune the complexity of the navigation and using Principle App I was able to accurately communicate subtle but necessary interactions.
+                            Through constant discussion and feedback from end users, we decided on two optional notification methods for users to accept or reject the job assignment, SMS link and email. Together with a minimal design and sharp color contrast, the content will be as obvious as possible.
                         </p>
                     </div>
                 </div>
@@ -265,12 +250,12 @@
         <div class="px-5 pt-5">
             <div class="row p-5">
                 <div class="col-md-6 text-center">
-                    <h3>Atomic consistency</h3>
+                    <h3>Pixel Consistency</h3>
                 </div>
                 <div class="col-md-6" style="max-width: 40% !important">
                     <div class="row px-3">
                         <p class="lead text-left pr-5">
-                            Alongside the finished interface designs, I produced a sketch file documenting all elements to keep the designs as consistent and re-usable as possible. This was an important tool for the development team to use and build an understanding for.
+                            Alongside the finished interface designs, I produced a guide file documenting all elements to keep the designs as consistent and re-usable as possible. This was an important tool for the development team to use and build an understanding for.
                         </p>
                     </div>
                 </div>
@@ -290,23 +275,23 @@
                 </div>
                 <div class="col-md-6" style="max-width: 40% !important">
                     <div class="mb-5">
-                        <h5 class="text-dark" style="font-weight: 600">Seek critical feedback early</h5>
+                        <h5 class="text-dark" style="font-weight: 600">Be aware of the final scope</h5>
                         <p class="lead text-left text-muted">
-                            Despite the close collaboration between design and build, there could have been more honest conversations had early on when defining the MVP. Our ambition blinded us early, which resulted in inadequate time for build feedback and a premature release.
+                            Be aware of how far the system will go and make sure to set the final scope of the application in advance, because most users do not think systematically about system design, but just ask for functionalities that pop into their heads. Sometimes there can be inconsistencies when analyzing the function carefully. Therefore, it is necessary to rank the importance of the functions in order to avoid conflicts with the previous completed design when the functions are appended later.
                         </p>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="py-3 mt-5" style="background: #BCC7CE">
+        <div class="py-3 mt-5 fade" style="background: #628198">
             <div class="container">
                 <h5 class="text-light mb-3 text-center">NEXT PROJECT</h5>
                 <div class="row text-center ">
                     <div class="col-md-12 mt-3">
-                        <h3 class="text-light" style="font-weight: 600">Desert Software</h3>
+                        <h3 class="text-light" style="font-weight: 600">Pistol Attendance Record</h3>
                     </div>
-                    <a href="DesertSoftware.html" role="button" class="btn btn-light mx-auto badge-pill bg-transparent my-3" style="width: 44px; height: 44px"><i class="fas fa-long-arrow-alt-right text-light" style="margin-top:6px"></i></a>
+                    <a href="PAR.html" role="button" class="btn btn-light mx-auto badge-pill bg-transparent my-3" style="width: 44px; height: 44px"><i class="fas fa-long-arrow-alt-right text-light" style="margin-top:6px"></i></a>
                 </div>
             </div>
         </div>
