--- a/Me.html
+++ b/Me.html
@@ -22,7 +22,7 @@
     <body style="background-color: #F1EFEE">
         <div>
             <a class="logo" href="Me.html" title="Long Geng Design">
-                <img src="images/logo.png" class="logo">
+                <img src="images/logo-sm.png" class="logo">
             </a>
             <a href="#menu" id="toggle"><span></span></a>
             <div id="menu">
