--- a/PAR.html
+++ b/PAR.html
@@ -245,7 +245,7 @@
         </div>
         
         <div class="pt-5 pb-5 fade">
-            <img src="images/Scheduler-evolution@2x.jpg" style="max-width:100%; height: auto">
+            <img src="images/PAR-evolution@2x.jpg" style="max-width:100%; height: auto">
         </div>
         
         <div class="px-5 pt-5 fade">
