--- a/About.html
+++ b/About.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="author" content="Long Geng" />
 
-        <title>About - Long Geng UX/UI</title>
+        <title>About - Long Geng UX/UI Design</title>
 
         <!-- Bootstrap core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet" />
