--- a/About.html
+++ b/About.html
@@ -80,7 +80,7 @@
                     <div class="row px-3 mb-5">
                         <h5 class="text-secondary" style="font-weight: 600">UI/UX/DIGITAL DESIGNER & FRONT END DEVELOPER — DESERT SOFTWARE<br />NOV 2017 — PRESENT</h5>
                         <p class="lead text-left pr-5">
-                            In this startup software and web service company, I work as a designer & developer for web applications including CMS, integrated dashboard systems, WordPress/Bootstrap websites and App UI design such as prototype design, wireframe work and UI visual design. The web applications are PHP based using HTML, CSS and Javascript, the UI design utilizes Adobe Creative Suite
+                            In this startup software and web service company, I work as a designer & developer for web applications including CMS, integrated dashboard systems, WordPress/Bootstrap websites and App UI design such as prototype design, wireframe work and UI visual design. The web applications are PHP based using HTML, CSS and Javascript, now we are transforming to ReactJs with new Material UI.
                         </p>
                         <p class="lead text-left pr-5">
                             Worked as the lead designer on projects collaborating closely with other developers and clients within weekly sprint cycles.
@@ -280,17 +280,7 @@
                                         </span>
                                     </li>
                                     <li>
-                                        <span class="ability-title">Agile Delivery</span>
-                                        <span class="ability-score">
-                                            <i class="fas fa-star filled"></i>
-                                            <i class="fas fa-star filled"></i>
-                                            <i class="fas fa-star filled"></i>
-                                            <i class="fas fa-star filled"></i>
-                                            <i class="fas fa-star"></i>
-                                        </span>
-                                    </li>
-                                    <li>
-                                        <span class="ability-title">Scrum Environment</span>
+                                        <span class="ability-title">Material UI</span>
                                         <span class="ability-score">
                                             <i class="fas fa-star filled"></i>
                                             <i class="fas fa-star filled"></i>
@@ -445,17 +435,7 @@
                                         </span>
                                     </li>
                                     <li>
-                                        <span class="ability-title">Notepad++</span>
-                                        <span class="ability-score">
-                                            <i class="fas fa-star filled"></i>
-                                            <i class="fas fa-star filled"></i>
-                                            <i class="fas fa-star filled"></i>
-                                            <i class="fas fa-star filled"></i>
-                                            <i class="fas fa-star"></i>
-                                        </span>
-                                    </li>
-                                    <li>
-                                        <span class="ability-title">CodePen</span>
+                                        <span class="ability-title">Visual Studio</span>
                                         <span class="ability-score">
                                             <i class="fas fa-star filled"></i>
                                             <i class="fas fa-star filled"></i>
@@ -466,6 +446,16 @@
                                     </li>
                                     <li>
                                         <span class="ability-title">NetBeans</span>
+                                        <span class="ability-score">
+                                            <i class="fas fa-star filled"></i>
+                                            <i class="fas fa-star filled"></i>
+                                            <i class="fas fa-star filled"></i>
+                                            <i class="fas fa-star filled"></i>
+                                            <i class="fas fa-star"></i>
+                                        </span>
+                                    </li>
+                                    <li>
+                                        <span class="ability-title">Node.js</span>
                                         <span class="ability-score">
                                             <i class="fas fa-star filled"></i>
                                             <i class="fas fa-star filled"></i>
