--- a/About.html
+++ b/About.html
@@ -320,6 +320,16 @@
                                         </span>
                                     </li>
                                     <li>
+                                        <span class="ability-title">Sass</span>
+                                        <span class="ability-score">
+                                            <i class="fas fa-star filled"></i>
+                                            <i class="fas fa-star filled"></i>
+                                            <i class="fas fa-star filled"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                        </span>
+                                    </li>
+                                    <li>
                                         <span class="ability-title">PHP</span>
                                         <span class="ability-score">
                                             <i class="fas fa-star filled"></i>
