--- a/About.html
+++ b/About.html
@@ -46,7 +46,7 @@
                     <h3 class="text-left text-light" style="font-size: 32px">
                         I believe great product design comes from a focus on the right questions, not the right answers.
                     </h3>
-                    <button onclick="location.href='CV.pdf'" type="button" class="btn btn-outline-light py-3 px-4 rounded-0 mt-3">DOWNLOAD CV</button>
+                    <button onclick="location.href='CV - Long Geng - UI UX Designer.pdf'" type="button" class="btn btn-outline-light py-3 px-4 rounded-0 mt-3">DOWNLOAD CV</button>
                 </div>
                 <div class="col-md-6"></div>
             </div>
