--- a/About.html
+++ b/About.html
@@ -95,17 +95,29 @@
                         <p class="lead text-left pr-5">
                             Managed outsourcing development teams.
                         </p>
+                        <p class="lead text-left pr-5">
+                            Achievements: Formed company branding design system from scratch. Increased product sales and enhanced customer stickiness by providing new design and product prototypes. Optimized websites performance and increased page view. Increased hits from redesigned email campaign.
+                        </p>
                     </div>
                     <div class="row px-3 mb-5">
                         <h5 class="text-secondary" style="font-weight: 600">PROTOTYPE DESIGNER & FRONT-END DEVELOPER — UMBRELLA DEMENTIA CAFES<br />MAY 2017 — OCT 2017</h5>
                         <p class="lead text-left pr-5">
-                            Worked as a prototype designer & junior front-end developer on a Melbourne based startup cafes website for people living with dementia. The website is built in MVC framework with multiple functions including online shopping, online group chat and social media integrated.
+                            Brainstormed, researched and designed a multifunctional responsive website and optimized the dementia app. Created interactive prototypes of varying fidelity to test assumptions and concepts. Conducted experience research and user interviews and usability testing.
+                        </p>
+                        <p class="lead text-left pr-5">
+                            Achievements: Established the design system of the brand. Successfully promoted the website and mobile app and increased hits and attention among target audience.
                         </p>
                     </div>
                     <div class="row px-3 mb-5">
                         <h5 class="text-secondary" style="font-weight: 600">UI/UX DESIGNER & FRONT-END DEVELOPER — SHENGXIAO MACHINERY<br />SEP 2016 — MAR 2017</h5>
                         <p class="lead text-left pr-5">
-                            At Shengxiao I learned how to apply HTML & CSS knowledge from textbooks in real development by working with other developers. I was a part of the the dev team to design, build and maintain the website. I was responsible for UI/UX design and part of the front-end development. It also involved a lot of image editing work using Adobe Creative Suite.
+                            Supported both development team and design team in creating the web app and website. Designed interfaces and user experiences for web developers. Created and usability tested wireframes and prototypes. Produced production design for advertising.
+                        </p>
+                    </div>
+                    <div class="row px-3 mb-5">
+                        <h5 class="text-secondary" style="font-weight: 600">UX RESEARCHER & DESIGNER (VOLUNTEER) — UMBRELLA DEMENTIA CAFES<br />MAR 2017 — MAY 2017</h5>
+                        <p class="lead text-left pr-5">
+                            Performed ideation, sketching and wireframing of a twinning mobile app. Created interactive prototypes to test assumptions and concepts. Conducted primary and secondary research, user interviews and usability testing.
                         </p>
                     </div>
                 </div>
